2006-03-03  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb: 
	* app/dialogs/file-open-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/file/file-open.[ch]
	* app/widgets/gimplayertreeview.c: pass the selected load procedure
	to file_open_layer() or NULL if none is selected. Fixes bug #333207.

	* app/pdb/fileops_cmds.c: regenerated.

2006-03-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_query): use proper sentinel type
	for gtk_dialog_set_alternative_button_order. Fixes bug #330800.

2006-03-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.c (gimp_image_real_flush): made it a static
	function (was accidentially non-static).

2006-03-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppickable.[ch]: added new methods ::get_bytes() and
	::flush()

	* app/core/gimpchannel.c
	* app/core/gimpdrawable.c
	* app/core/gimpimagemap.c
	* app/core/gimpprojection.c: implement ::get_bytes()

	* app/core/gimpprojection.c: implement ::flush() (immediately
	process both the idle renderer's queue and the unflushed update
	areas, to make sure that any reading from the projection will
	re-construct it).

	* app/core/gimp-edit.c
	* app/core/gimpchannel.c
	* app/core/gimpimage-contiguous-region.c
	* app/core/gimpimage-crop.c
	* app/core/gimppalette-import.c
	* app/paint/gimpclone.c
	* app/tools/gimpbycolorselecttool.c
	* app/tools/gimpiscissorstool.c
	* tools/pdbgen/pdb/image.pdb: use the pickable interface more
	consistently when reading from any drawable or the projection, and
	call gimp_pickable_flush() before doing so. Fixes bug #332933.

	* app/core/gimpimage-pick-color.c: added comment why the we don't
	call gimp_pickable_flush() here.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2006-03-02  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb: corrected documentation for
	gimp_image_[lower|raise]_layer(). We do not any longer refuse to
	raise and lower based on a missing alpha channel.
